--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
     "build": "webpack --config webpack.config.js",
     "test": "jest"
   },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
+    "setupFiles": [
+      "./__tests__/jest/jestSetup.js"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.test.js?(x)"
+    ],
+    "transform": {
+      "'^.+\\.js?$": "babel-jest",
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ag-digital/acme-supermarket-test.git"
@@ -35,6 +48,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -43,6 +57,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.1.0",
+    "jest-enzyme": "^6.0.1",
+    "react-test-renderer": "^16.4.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   }
